tests/e2e/not_allowed/let.error
Error: syntax error in story at line 1, column 1

1|    let = 1
      ^^^

E0030: `let` is reserved for future use
